--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -15,6 +15,13 @@
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
 
+@font-face {
+    font-family: 'Cabin';
+    src: url('../assets/fonts/Cabin-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
 *{
 	font-family:'Cabin', sans-serif;
 }
