--- a/src/pages/start/start.scss
+++ b/src/pages/start/start.scss
@@ -8,17 +8,18 @@ page-start {
 	    background-size: cover;
 		width:100%;
 		height:100%;
-		position:absolute;
+		position:fixed;
 		top:1px;
 		left:0;
 		z-index:-1;
 	}
 	.start-title{
-		margin-top:16rem;
+		margin-top:14rem;
 		h1{
 			border-top:1rem solid #FFF;
+			border-bottom:1rem solid #FFF;
 			text-align:right;
-			font-size:10rem;
+			font-size:9rem;
 			color:#FFF;
 			font-weight:bold;
 		}
