speech recognition success

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -43,7 +43,7 @@ $colors: (
   danger:     #ED5565,
   danger2:     #DA4453,
   light:      #F5F7FA,
-  light2:      #E6E9ED,
+  light2:      #bdc3c7,
   dark:       #656D78,
   dark2:       #434A54
 );
