--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -8,8 +8,8 @@ page-home {
 	.title{
 		margin:1rem 2rem;
 	}
-	.home-cuisine1{
-		background:url("../assets/imgs/rendang.jpg");
+	.home-cuisine0{
+		background:url("../assets/imgs/kebuli.jpg");
 		background-size: 100% 100%;
 	    background-position: center;
 	    background-repeat: no-repeat;
@@ -21,10 +21,11 @@ page-home {
 		text-align:center;
 		p{
 			margin:auto;
+			color:map-get($colors, light);
 		}
 	}
 
-	.home-cuisine2{
+	.home-cuisine1{
 		background:url("../assets/imgs/tongseng.jpg");
 		background-size: 100% 100%;
 	    background-position: center;
@@ -40,7 +41,7 @@ page-home {
 		}
     }
 
-	.home-cuisine3{
+	.home-cuisine2{
 		background:url("../assets/imgs/rendang.jpg");
 		background-size: 100% 100%;
 	    background-position: center;
@@ -55,11 +56,38 @@ page-home {
 			margin:auto;
 		}
     }
+	.home-cuisine3{
+		background:url("../assets/imgs/mieayam.png");
+		background-size: 100% 100%;
+	    background-position: center;
+	    background-repeat: no-repeat;
+	    background-size: cover;
+		border-radius:1rem;
+		width:100%;
+		height:100%;
+		padding:1rem;
+		text-align:center;
+		p{
+			margin:auto;
+			color:map-get($colors, light2);
+		}
+    }
 	.home-card{
 		margin:0;
 		margin-top:1rem;
 		width:100%;
 		box-shadow:0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 1px -2px rgba(0, 0, 0, 0.2), 0 0px 0px 0 rgba(0, 0, 0, 0.12);
+		
+		ion-badge{
+			position:absolute;
+			right:2rem;
+			margin-top:-8rem;
+			padding:0.8rem;
+			h1{
+				color:#FFF !important;
+				font-weight:bold !important;
+			}
+		}
 	}
 	.home-card-img
 	{
@@ -71,7 +99,7 @@ page-home {
 	  position: absolute;
 	  left: 50%;
 	  top: 50%;
-	  width: auto;
+	  width: 100%;
 	  -webkit-transform: translate(-50%,-50%);
 	      -ms-transform: translate(-50%,-50%);
 	          transform: translate(-50%,-50%);
